# ferriscope

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
python/ferrum_scrape/: __init__.py  async_extractor.py  constants.py  extractor.py
python/scrape_tools/: async_extractor.py  constants.py  extractor.py
src/: dom_index.rs  error.rs  extractor.rs  lib.rs  robots.rs  types.rs
src/article_extractor/: dates.rs  helpers.rs  mod.rs
src/link_extractor/: helpers.rs  mod.rs
src/products_extractor/: basic.rs  helpers.rs  mod.rs  pricing.rs  reviews.rs
src/socials_extractor/: mod.rs  twitter.rs
src/text_extractor/: helpers.rs  mod.rs
src/videos_extractor/: book.rs  helpers.rs  mod.rs  video.rs
