[package]
name = "ferriscope"
version = "0.1.0"
edition = "2021"

[lib]
name = "_ferriscope_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["auto-initialize", "extension-module"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.19"
whatlang = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
regex = "1.10"
once_cell = "1.19"
rand = "0.8"
redis = { version = "0.24", features = ["tokio-comp"] }
robots = "0.12"
